# rproc

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  flake.nix
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
packaging/: io.github.trystan_sa.rproc.desktop  io.github.trystan_sa.rproc.metainfo.xml  rprocd.system.service
packaging/appimage/: AppRun
packaging/flatpak/: .gitignore  io.github.trystan_sa.rproc.yml
packaging/flatpak/flathub/: README.md  io.github.trystan_sa.rproc.yml
scripts/: appimage_install.sh  release.sh
src/: app.rs  main.rs  settings.rs  theme.rs
src/daemon/: mod.rs  pidfile.rs
src/monitor/: attribution.rs  cgroup.rs  cgroup_tests.rs  gpu.rs  gpu_attribution.rs  gpu_tests.rs  mod.rs  processes.rs  processes_tests.rs  sampler.rs  sampler_tests.rs  services.rs  services_tests.rs  startup.rs  system.rs
src/monitor/gpu/: amd.rs  intel.rs  mod.rs  nvidia.rs
src/monitor/startup/: desktop.rs  mod.rs  systemd.rs  systemd_tests.rs
src/ui/: attribution.rs  context_menu.rs  graph.rs  icons.rs  icons_tests.rs  mod.rs  model.rs  performance.rs  processes.rs  processes_tests.rs  services.rs  settings.rs  sidebar.rs  startup.rs  widgets.rs  widgets_tests.rs
src/ui/icons/: freedesktop.rs  freedesktop_tests.rs  icons_tests.rs  mod.rs
src/ui/performance/: cards.rs  format.rs  format_tests.rs  mod.rs  panels.rs
src/ui/processes/: actions.rs  actions_tests.rs  grouping.rs  grouping_tests.rs  mod.rs  processes_tests.rs  properties.rs  sort.rs  sort_tests.rs
src/ui/services/: mod.rs  properties.rs
src/ui/startup/: filter.rs  filter_tests.rs  mod.rs  properties.rs
ui/: app.slint  performance.slint  processes.slint  services.slint  settings.slint  sidebar.slint  startup.slint  structs.slint  theme.slint  widgets.slint
