[package]
name = "rproc"
version = "0.1.0"
edition = "2021"
description = "Resource & process monitor for Linux, inspired by Windows 11 Task Manager"
license = "MIT"

[dependencies]
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.32"
egui_plot = "0.33"
egui_extras = { version = "0.32", default-features = false }
sysinfo = "0.33"
nvml-wrapper = "0.11"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
