[package]
name = "rproc"
version = "0.1.2"
edition = "2024"
description = "Resource & process monitor for Linux, inspired by Windows 11 Task Manager"
license = "MIT"

[dependencies]
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.32"
egui_plot = "0.33"
egui_extras = { version = "0.32", default-features = false, features = ["image", "svg"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
sysinfo = "0.33"
nvml-wrapper = "0.11"
anyhow = "1"
libc = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
# Drop unwinding: a monitor has nothing to catch a panic for, and abort sheds
# the landing-pad code + unwind tables from the binary (smaller image, less
# mapped memory).
panic = "abort"

[package.metadata.deb]
maintainer = "Trystan Sarrade <trystan.sarrade@somanyways.co>"
section = "utils"
priority = "optional"
depends = "$auto"
extended-description = """\
rproc is a resource and process monitor for Linux, inspired by the
Windows 11 Task Manager. It shows live CPU, memory, disk, network and
GPU usage along with the full process tree, services and startup
entries."""
assets = [
    ["target/release/rproc", "usr/bin/", "755"],
    ["packaging/io.github.trystan_sa.rproc.desktop", "usr/share/applications/", "644"],
    ["packaging/io.github.trystan_sa.rproc.metainfo.xml", "usr/share/metainfo/", "644"],
    ["packaging/icons/hicolor/scalable/apps/io.github.trystan_sa.rproc.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["packaging/rprocd.system.service", "usr/lib/systemd/user/rprocd.service", "644"],
    ["README.md", "usr/share/doc/rproc/README.md", "644"],
]

[package.metadata.generate-rpm]
license = "MIT"
summary = "Resource and process monitor for Linux"
assets = [
    { source = "target/release/rproc", dest = "/usr/bin/rproc", mode = "755" },
    { source = "packaging/io.github.trystan_sa.rproc.desktop", dest = "/usr/share/applications/io.github.trystan_sa.rproc.desktop", mode = "644" },
    { source = "packaging/io.github.trystan_sa.rproc.metainfo.xml", dest = "/usr/share/metainfo/io.github.trystan_sa.rproc.metainfo.xml", mode = "644" },
    { source = "packaging/icons/hicolor/scalable/apps/io.github.trystan_sa.rproc.svg", dest = "/usr/share/icons/hicolor/scalable/apps/io.github.trystan_sa.rproc.svg", mode = "644" },
    { source = "packaging/rprocd.system.service", dest = "/usr/lib/systemd/user/rprocd.service", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/rproc/README.md", mode = "644", doc = true },
]
auto-req = "auto"
